# Restaurant_Managment_System

./: .txt  README.md  main.py  pyproject.toml  seed_db.py  test.db
restaurant-frontend/: README.md  index.html  package-lock.json  package.json
restaurant-frontend/src/: App.jsx  index.css  main.jsx
restaurant-frontend/src/components/: Nav.jsx
restaurant-frontend/src/context/: AuthContext.jsx
restaurant-frontend/src/pages/: AdminPage.jsx  AuthPage.jsx  BookingPage.jsx  MyBookingPage.jsx  RestaurantsPage.jsx  UsersPage.jsx
restaurant-frontend/src/utils/: api.js
src/: app.py  auth.py  db.py  models.py  schemas.py  services.py
src/routers/: bookings.py  restaurants.py  tables.py  users.py
